# DC2DMMesTextTool_GUI-and-Patch

./: .gitignore  DC2DMMesTextTool_GUI.csproj  MainForm.cs  MesScript.cs  MesToolProcessor.cs  Program.cs  README.md  ScriptInfo.cs  TextEntry.cs  TextFormatter.cs  UnicodeValidator.cs
DC2DMPatch a/: CMakeLists.txt  README.md  build.bat  run_build.bat
DC2DMPatch a/src/: dc4patch.cpp  dsound_proxy.cpp  launcher.cpp  launcher.rc  resource.h
DC2DMPatch a/tools/: get_addresses.py
